--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@rxweb/reactive-form-validators": "^2.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.18.5",
